# opt

./: .clang-format  .gitignore  arg.c  arg.h  main.c  meson.build  opt.c  opt.h
examples/: subcommands.c
subprojects/: cmocka.wrap
tests/: test_init.c
